--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
   </header>
 
   <div id="navMenu">
-    <div>Enter the Abyss</div>
-    <div>Echoes</div>
-    <div>Void Profiles</div>
-    <div>Dark Messenger</div>
-    <div>System Core</div>
-  </div>
+  <div onclick="location.href='index.html'">Enter the Abyss</div>
+  <div onclick="location.href='echoes.html'">Echoes</div>
+  <div onclick="alert('Coming soon')">Void Profiles</div>
+  <div onclick="alert('Coming soon')">Dark Messenger</div>
+  <div onclick="alert('Coming soon')">System Core</div>
+</div>
 
   <div id="subtitle">Say something in the void...</div>
 
