--- a/echoes.html
+++ b/echoes.html
@@ -102,16 +102,39 @@
       border-radius: 6px;
     }
 
-    .author {
-      font-size: 14px;
-      color: #999;
-      margin-bottom: 5px;
-    }
-
     .countdown {
       font-size: 12px;
       color: #aaa;
       margin-top: 5px;
+    }
+
+    .replyInput {
+      width: 100%;
+      margin-top: 8px;
+      padding: 6px;
+      background-color: #111;
+      border: 1px solid #333;
+      color: white;
+    }
+
+    .replyButton {
+      margin-top: 4px;
+      padding: 6px 10px;
+      background-color: #333;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    .replyButton:hover {
+      background-color: #555;
+    }
+
+    .reply {
+      padding: 6px 10px;
+      background-color: #333;
+      margin-top: 6px;
+      border-radius: 4px;
     }
   </style>
 
@@ -171,7 +194,8 @@
         const threadRef = db.ref("echoes").push();
         threadRef.set({
           text,
-          timestamp
+          timestamp,
+          replies: []
         });
         threadInput.value = "";
       }
@@ -181,47 +205,56 @@
       threadsDiv.innerHTML = "";
       const now = Date.now();
 
-      const threads = [];
       snapshot.forEach(child => {
         const key = child.key;
         const data = child.val();
-        const expiresAt = data.timestamp + 60 * 60 * 1000;
+        const expiresAt = data.timestamp + 60 * 60 * 1000; // 1 hour
         const secondsLeft = Math.max(0, Math.ceil((expiresAt - now) / 1000));
-        if (secondsLeft > 0) {
-          threads.push({ key, data, expiresAt, secondsLeft });
-        } else {
+
+        if (secondsLeft <= 0) {
           db.ref("echoes").child(key).remove();
+          return;
         }
-      });
 
-      threads.sort((a, b) => a.data.timestamp - b.data.timestamp); // bottom-up flow
-
-      threads.forEach(({ key, data, expiresAt, secondsLeft }) => {
         const threadEl = document.createElement("div");
         threadEl.className = "thread";
 
         threadEl.innerHTML = `
-          <div class="author">Posted by Anonymous</div>
           <div>${data.text}</div>
           <div class="countdown" id="cd-${key}">${secondsLeft}s left</div>
+          <div class="replies">${(data.replies || []).map(reply => `<div class="reply">${reply}</div>`).join("")}</div>
+          <input class="replyInput" id="input-${key}" placeholder="Reply..."/>
+          <button class="replyButton" onclick="replyTo('${key}')">Reply</button>
         `;
 
         threadsDiv.appendChild(threadEl);
 
         // Countdown updates
         setInterval(() => {
+          const newSeconds = Math.max(0, Math.ceil((expiresAt - Date.now()) / 1000));
           const cdEl = document.getElementById("cd-" + key);
-          if (cdEl) {
-            const newSec = Math.max(0, Math.ceil((expiresAt - Date.now()) / 1000));
-            cdEl.textContent = `${newSec}s left`;
-          }
+          if (cdEl) cdEl.textContent = `${newSeconds}s left`;
         }, 1000);
 
-        // Auto-remove
+        // Auto-remove after expiration
         setTimeout(() => {
           db.ref("echoes").child(key).remove();
         }, expiresAt - now);
       });
+    }
+
+    function replyTo(key) {
+      const input = document.getElementById("input-" + key);
+      const reply = input.value.trim();
+      if (reply) {
+        const threadRef = db.ref("echoes").child(key).child("replies");
+        threadRef.once("value", snap => {
+          const replies = snap.val() || [];
+          replies.push(reply);
+          threadRef.set(replies);
+        });
+        input.value = "";
+      }
     }
 
     db.ref("echoes").on("value", renderThreads);
@@ -229,4 +262,3 @@
 
 </body>
 </html>
-
