--- a/echoes.html
+++ b/echoes.html
@@ -66,7 +66,7 @@
       border-bottom: 1px solid #333;
     }
 
-    #threadInput {
+    #echoTitleInput {
       width: 60%;
       padding: 10px;
       border: 1px solid #333;
@@ -76,7 +76,7 @@
       margin-right: 10px;
     }
 
-    #postThread {
+    #startEcho {
       padding: 10px 20px;
       border: none;
       background-color: #333;
@@ -85,7 +85,39 @@
       border-radius: 4px;
     }
 
-    #postThread:hover {
+    #startEcho:hover {
+      background-color: #555;
+    }
+
+    #contentInputContainer {
+      display: none;
+      padding: 10px;
+      text-align: center;
+      background-color: #111;
+      border-bottom: 1px solid #333;
+    }
+
+    #echoContentInput {
+      width: 60%;
+      height: 80px;
+      padding: 10px;
+      background-color: #111;
+      color: white;
+      border: 1px solid #333;
+      border-radius: 4px;
+    }
+
+    #confirmEcho {
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: #333;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    #confirmEcho:hover {
       background-color: #555;
     }
 
@@ -159,106 +191,134 @@
   <div id="subtitle">Start a thread that echoes for 1 hour...</div>
 
   <div id="newThread">
-    <input id="threadInput" placeholder="What's your thought..." />
-    <button id="postThread">Echo</button>
+    <input id="echoTitleInput" placeholder="Echo title..." />
+    <button id="startEcho">Start Echo</button>
+  </div>
+
+  <div id="contentInputContainer">
+    <textarea id="echoContentInput" placeholder="Write your topic..."></textarea>
+    <br>
+    <button id="confirmEcho">Echo</button>
   </div>
 
   <div id="threads"></div>
 
   <script>
-    function toggleNav() {
-      const menu = document.getElementById("navMenu");
-      menu.style.display = menu.style.display === "block" ? "none" : "block";
+  function toggleNav() {
+    const menu = document.getElementById("navMenu");
+    menu.style.display = menu.style.display === "block" ? "none" : "block";
+  }
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyClW4zHDde1rQm6RkHQcD2rM0sklBBgdrM",
+    authDomain: "void-d9ec4.firebaseapp.com",
+    databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
+    projectId: "void-d9ec4",
+    storageBucket: "void-d9ec4.appspot.com",
+    messagingSenderId: "267268035851",
+    appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
+
+  const threadsDiv = document.getElementById("threads");
+  const echoTitleInput = document.getElementById("echoTitleInput");
+  const echoContentInput = document.getElementById("echoContentInput");
+  const contentInputContainer = document.getElementById("contentInputContainer");
+  const startEchoButton = document.getElementById("startEcho");
+  const confirmEchoButton = document.getElementById("confirmEcho");
+
+  let currentEchoTitle = "";
+
+  startEchoButton.onclick = () => {
+    const title = echoTitleInput.value.trim();
+    if (title) {
+      currentEchoTitle = title;
+      contentInputContainer.style.display = "block";
+      echoTitleInput.disabled = true;
+      startEchoButton.disabled = true;
     }
+  };
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyClW4zHDde1rQm6RkHQcD2rM0sklBBgdrM",
-      authDomain: "void-d9ec4.firebaseapp.com",
-      databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
-      projectId: "void-d9ec4",
-      storageBucket: "void-d9ec4.appspot.com",
-      messagingSenderId: "267268035851",
-      appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-
-    const threadsDiv = document.getElementById("threads");
-    const threadInput = document.getElementById("threadInput");
-    const postButton = document.getElementById("postThread");
-
-    postButton.onclick = () => {
-      const text = threadInput.value.trim();
-      if (text !== "") {
-        const timestamp = Date.now();
-        const threadRef = db.ref("echoes").push();
-        threadRef.set({
-          text,
-          timestamp,
-          replies: []
-        });
-        threadInput.value = "";
-      }
-    };
-
-    function renderThreads(snapshot) {
-      threadsDiv.innerHTML = "";
-      const now = Date.now();
-
-      snapshot.forEach(child => {
-        const key = child.key;
-        const data = child.val();
-        const expiresAt = data.timestamp + 60 * 60 * 1000; // 1 hour
-        const secondsLeft = Math.max(0, Math.ceil((expiresAt - now) / 1000));
-
-        if (secondsLeft <= 0) {
-          db.ref("echoes").child(key).remove();
-          return;
-        }
-
-        const threadEl = document.createElement("div");
-        threadEl.className = "thread";
-
-        threadEl.innerHTML = `
-          <div>${data.text}</div>
-          <div class="countdown" id="cd-${key}">${secondsLeft}s left</div>
-          <div class="replies">${(data.replies || []).map(reply => `<div class="reply">${reply}</div>`).join("")}</div>
-          <input class="replyInput" id="input-${key}" placeholder="Reply..."/>
-          <button class="replyButton" onclick="replyTo('${key}')">Reply</button>
-        `;
-
-        threadsDiv.appendChild(threadEl);
-
-        // Countdown updates
-        setInterval(() => {
-          const newSeconds = Math.max(0, Math.ceil((expiresAt - Date.now()) / 1000));
-          const cdEl = document.getElementById("cd-" + key);
-          if (cdEl) cdEl.textContent = `${newSeconds}s left`;
-        }, 1000);
-
-        // Auto-remove after expiration
-        setTimeout(() => {
-          db.ref("echoes").child(key).remove();
-        }, expiresAt - now);
+  confirmEchoButton.onclick = () => {
+    const content = echoContentInput.value.trim();
+    if (content && currentEchoTitle) {
+      const timestamp = Date.now();
+      const threadRef = db.ref("echoes").push();
+      threadRef.set({
+        title: currentEchoTitle,
+        content,
+        timestamp,
+        replies: []
       });
+      // Reset
+      echoTitleInput.value = "";
+      echoContentInput.value = "";
+      contentInputContainer.style.display = "none";
+      echoTitleInput.disabled = false;
+      startEchoButton.disabled = false;
+      currentEchoTitle = "";
     }
+  };
 
-    function replyTo(key) {
-      const input = document.getElementById("input-" + key);
-      const reply = input.value.trim();
-      if (reply) {
-        const threadRef = db.ref("echoes").child(key).child("replies");
-        threadRef.once("value", snap => {
-          const replies = snap.val() || [];
-          replies.push(reply);
-          threadRef.set(replies);
-        });
-        input.value = "";
+  function renderThreads(snapshot) {
+    threadsDiv.innerHTML = "";
+    const now = Date.now();
+
+    snapshot.forEach(child => {
+      const key = child.key;
+      const data = child.val();
+      const expiresAt = data.timestamp + 60 * 60 * 1000; // 1 hour
+      const secondsLeft = Math.max(0, Math.ceil((expiresAt - now) / 1000));
+
+      if (secondsLeft <= 0) {
+        db.ref("echoes").child(key).remove();
+        return;
       }
-    }
 
-    db.ref("echoes").on("value", renderThreads);
-  </script>
+      const threadEl = document.createElement("div");
+      threadEl.className = "thread";
+
+      threadEl.innerHTML = `
+        <div style="font-weight: bold; font-size: 18px;">${data.title}</div>
+        <div style="margin-top: 4px;">${data.content}</div>
+        <div class="countdown" id="cd-${key}">${secondsLeft}s left</div>
+        <div class="replies">${(data.replies || []).map(reply => `<div class="reply">${reply}</div>`).join("")}</div>
+        <input class="replyInput" id="input-${key}" placeholder="Reply..."/>
+        <button class="replyButton" onclick="replyTo('${key}')">Reply</button>
+      `;
+
+      threadsDiv.appendChild(threadEl);
+
+      setInterval(() => {
+        const newSeconds = Math.max(0, Math.ceil((expiresAt - Date.now()) / 1000));
+        const cdEl = document.getElementById("cd-" + key);
+        if (cdEl) cdEl.textContent = `${newSeconds}s left`;
+      }, 1000);
+
+      setTimeout(() => {
+        db.ref("echoes").child(key).remove();
+      }, expiresAt - now);
+    });
+  }
+
+  function replyTo(key) {
+    const input = document.getElementById("input-" + key);
+    const reply = input.value.trim();
+    if (reply) {
+      const threadRef = db.ref("echoes").child(key).child("replies");
+      threadRef.once("value", snap => {
+        const replies = snap.val() || [];
+        replies.push(reply);
+        threadRef.set(replies);
+      });
+      input.value = "";
+    }
+  }
+
+  db.ref("echoes").on("value", renderThreads);
+</script>
 
 </body>
 </html>
+
